fixed fao logo size on mobile

--- a/src/css/components/_fao-navigation.scss
+++ b/src/css/components/_fao-navigation.scss
@@ -5,8 +5,10 @@ $navbar-height: 44px;
 
 
 .fao-logo-header{
-  margin-top: 15px;
-  margin-bottom: 15px;
+  //margin-top: 15px;
+  //margin-bottom: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   @media (min-width: 768px) {
     margin-bottom: 0;
